--- a/invoices/webapp/index.html
+++ b/invoices/webapp/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <title>Invoices SAPUI5</title>
 </head>
-<script id="sap-ui-bootstrap" src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
-    data-sap-ui-theme="sap_horizon" data-sap-ui-resourceroots='{"invoices": "./"}'
-    data-sap-ui-oninit="module:sap/ui/core/ComponentSupport" data-sap-ui-compatVersion="edge"
+<script id="sap-ui-bootstrap" 
+    src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+    data-sap-ui-theme="sap_horizon" 
+    data-sap-ui-resourceroots='{"invoices": "./"}'
+    data-sap-ui-oninit="module:sap/ui/core/ComponentSupport" 
+    data-sap-ui-compatVersion="edge"
     data-sap-ui-async="true"></script>
 
 <body class="sapUiBody" id="content">
